--- a/Frontend/css/zalogin.css
+++ b/Frontend/css/zalogin.css
@@ -9,7 +9,7 @@
 body{
    margin:0;
     font-family: 'Poppins';
-    background: url("/images/pozadina2.jpg");
+    background: url("/Frontend/images/pozadina2.jpg");
    
 }
 .naslov{
