--- a/Frontend/css/zablog.css
+++ b/Frontend/css/zablog.css
@@ -30,9 +30,14 @@ body{
 }
 .je{
     margin-top: 0;
+    cursor: default;
 }
 .dva{
     margin-top: 0;
+    cursor: default;
+}
+.lajkovi{
+    cursor: default;
 }
 
 .info{
@@ -52,7 +57,6 @@ body{
 .lajkovi{
     z-index: 9999;
 }
-
 
 header{
     z-index: 9999;
