--- a/Frontend/css/zalogin.css
+++ b/Frontend/css/zalogin.css
@@ -10,6 +10,8 @@ body{
    margin:0;
     font-family: 'Poppins';
     background: url("/Frontend/images/pozadina2.jpg");
+    background-repeat: no-repeat ;
+    background-size: cover ;
    
 }
 .naslov{
@@ -36,7 +38,6 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    
 
 }
 
@@ -46,6 +47,7 @@ body{
     justify-content: center;
     align-items: center;
     gap: 1em;
+    margin-top: 30px;
 }
 
 
@@ -55,15 +57,6 @@ body{
     max-width:500px ;
     background-color: hsla(0, 12%, 5%, 0.671);
     border-radius: 20px;
-    position: absolute;
-}
-.singup{
-    width: 100%;
-    transform: translateX(100%);
-    left:50%
-}
-.singin{
-    width: 100%;
     position: absolute;
 }
 .btn {
