--- a/Frontend/css/zalogin.css
+++ b/Frontend/css/zalogin.css
@@ -53,8 +53,8 @@ body{
 
 .kont{
     width: 100%;
-    height: 420px;
-    max-width:500px ;
+    height: 27rem;
+    max-width:30rem ;
     background-color: hsla(0, 12%, 5%, 0.671);
     border-radius: 20px;
     position: absolute;
@@ -93,4 +93,7 @@ input:focus{
 }
 header{
     z-index: 99999;
+}
+.kontejner{
+
 }
