About us | Ide gas | Among us | (i neke manje esteticke izmene koje mogu da se reversuju ako se ispostavi da samo imam autizam i da su ruzne)

--- a/Frontend/css/zalogin.css
+++ b/Frontend/css/zalogin.css
@@ -9,7 +9,7 @@
 body{
    margin:0;
     font-family: 'Poppins';
-    background-image: url("../images/pozadina2.jpg");
+    background-image: url("../images/pozadina2_rework.jpg");
     background-repeat: no-repeat ;
     background-size: cover ;
    
