--- a/Frontend/css/zalogin.css
+++ b/Frontend/css/zalogin.css
@@ -48,16 +48,18 @@ body{
     align-items: center;
     gap: 1em;
     margin-top: 30px;
+    z-index: 10;
 }
 
 
-.kont{
+.kont {
     width: 100%;
     height: 27rem;
     max-width:30rem ;
     background-color: hsla(0, 12%, 5%, 0.671);
     border-radius: 20px;
     position: absolute;
+    z-index: -1;
 }
 .btn {
     background: red;
