--- a/Frontend/css/zapreporuku.css
+++ b/Frontend/css/zapreporuku.css
@@ -14,6 +14,13 @@ body{
     
  }
 
+ .kontejner{
+    position: relative;
+    width: 100%;
+    height:96vh
+    
+    }
+
 .mapa{
 position:absolute;
 right:12%;
@@ -23,10 +30,27 @@ border:red solid 2px;
 
 }
 
+.mapa1{
+    position:absolute;
+    right:12%;
+    top:50%;
+    width:25%;
+    height: 35%;
+    border:red solid 2px;
+    
+}
+
 
 .img{
     position:absolute;
     left:7%;
+    width:40%;
+    height: 35%;
+}
+.img1{
+    position:absolute;
+    left:7%;
+    top:50%;
     width:40%;
     height: 35%;
 }
