--- a/Frontend/css/zablog.css
+++ b/Frontend/css/zablog.css
@@ -32,6 +32,26 @@ background-size: cover;
     padding: 20px;
     background-color: #f0f0fa;
 }
+
+
+.loading {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid  hsl(51, 84%, 70%);; 
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    z-index: 1;
+    left: 48%;
+    top: 48%;
+    position: absolute;
+    
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 .je{
     margin-top: 0;
     cursor: default;
