--- a/Frontend/css/main.css
+++ b/Frontend/css/main.css
@@ -9,6 +9,8 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Poppins';
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .flex{
