--- a/Frontend/css/zablog.css
+++ b/Frontend/css/zablog.css
@@ -5,6 +5,8 @@ body{
 background-image: url(../images/blogo.jpg);
 background-repeat: no-repeat;
 background-size: cover;
+min-height: 100%;
+background-attachment: fixed;
 }
 .kardkont{
     margin: 0 auto;
