--- a/Frontend/css/zablog.css
+++ b/Frontend/css/zablog.css
@@ -7,6 +7,7 @@ background-repeat: no-repeat;
 background-size: cover;
 min-height: 100%;
 background-attachment: fixed;
+padding-bottom: 30px;
 }
 .kardkont{
     margin: 0 auto;
